# unigram

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
src/unigram/: FOL-nli.py  __init__.py  generate.py  generate_recursive.py  generate_sequential.py  grammar.py  production.py
src/unigram/.ipynb_checkpoints/: __init__-checkpoint.py
src/unigram/assets/: fol-nli-axioms  fol_nli_verbalization.py
src/unigram/grammars/: FOL.py  __init__.py  english.py  tinypy.py
src/unigram/solver_utils/: tptp.py
src/unigram/solver_utils/.ipynb_checkpoints/: tptp-checkpoint.py
