[tool.poetry]
name = "unigram"
version = "0.8.0"
description = ""
authors = ["Damien Sileo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
anytree = "^2"
networkx = "*"
funcy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
