 [metadata]
name = unigram
description = Framework for grammar-based synthetic data generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sileod/unigram/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    funcy
    pandas
    anytree
    networkx
    exrex


[options.packages.find]
where = src
